# plex-rag

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.streamlit/: config.toml
app/: browser.py  cli.py  config.py  enums.py  main.py  plex.py  rag.py  scrape_imdb.py  synopsis.py
app/adapters/: generators.py  retrievers.py
app/domain/: ports.py  recommender.py
app/models/: media_item.py
app/repositories/: base.py  json.py  sql.py
app/services/: enrichment.py  recommendation.py  vector_store.py
streamlit_app/: components.py  init.py  main.py
tests/e2e/: conftest.py  test_enrichment.py  test_pipeline.py  test_vector_store.py
tests/integration/: test_conversation.py  test_generators.py  test_retrievers.py  test_safety_settings.py
tests/unit/: test_enrichment.py  test_media_item.py  test_recommender.py  test_sync.py  test_synopsis.py
