[project]
name = "plex-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.3",
    "langchain-qdrant>=1.1.0",
    "playwright>=1.60.0",
    "plexapi>=4.18.1",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "typer>=0.15.0",
]

[project.scripts]
plex-rag = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "S", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
explicit_package_bases = true
